--- a/app/ui/dashboard/jobs/viewJob/viewJob.module.css
+++ b/app/ui/dashboard/jobs/viewJob/viewJob.module.css
@@ -181,3 +181,52 @@
     padding: 10px 0;
 
 }
+
+
+.modal{
+    position:absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    
+    background-color: rgba(0, 0, 0, 0.491);
+  }
+
+  .modalWrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modalContainer{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 20px;
+    color: rgb(87, 87, 87);
+    height: 60%;
+    overflow-y: scroll;
+  }
+
+  .modalLine{
+    height: 10px;
+    width: 100%;
+    border-bottom: 1px solid rgb(179, 179, 179);
+  }
+
+  .workInputContainer{
+    padding: 10px;
+    width: 100%;
+
+  }
+
+  .workInputButton{
+    position: fixed;
+    top: 15%;
+    right: 25%;
+  }
