--- a/app/dashboard/clients/page.module.css
+++ b/app/dashboard/clients/page.module.css
@@ -198,3 +198,66 @@
   .delete{
     background-color: crimson;
   }
+
+  .modal{
+    position:absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.491);
+  }
+
+  .modalWrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modalContainer{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding: 20px;
+    color: rgb(87, 87, 87);
+  }
+
+  .modalLine{
+    height: 10px;
+    width: 100%;
+    border-bottom: 1px solid rgb(179, 179, 179);
+  }
+
+  .workInputContainer{
+    padding: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .workInput{
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+  }
+
+  .workInput input{
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgb(200, 200, 200);
+    border-radius: 5px;
+  }
+
+  .workInputButton{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
