--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
   /* --bg: #beb5d5;
   --bgSoft: #e5e2ed; */
@@ -16,6 +18,7 @@
 body {
   background-color: var(--bg);
   color: var(--text);
+  font-family: 'Inter', sans-serif;
 }
 
 a {
